force-app/main/default/objects/Cap_Grade_Level__c.object
<CustomObject>
    <fields>
        <fullName>Cap__c</fullName>
        <description>The enrollment cap</description>
        <label>Cap</label>
        <referenceTo>Cap__c</referenceTo>
        <relationshipLabel>Cap Grade Levels</relationshipLabel>
        <relationshipName>Cap_Grade_Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Enrolled_Students__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Enrolled Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Grade_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Grade Level</label>
        <referenceTo>Program_Grade_Level__c</referenceTo>
        <relationshipLabel>Cap Grade Levels</relationshipLabel>
        <relationshipName>Cap_Grade_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cap Grade Level</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cap Grade Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cap Grade Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>